# RADMC

./: .gitignore  CMakeLists.txt  GPURADMC  Makefile
include/: cartesian_regular_grid.hh  common.hh  dust.hh  dust_species.hh  emissivity.hh  frequencies.hh  general_grid.hh  grid.hh  monteCarlo.hh  monte_carlo.hh  photon.hh  photons.hh  regular_grid.hh  spherical_regular_grid.hh  star.hh  stars.hh
inputs/: amr_grid.inp  amr_grid_3d.inp  radmc3d.inp
src/: cartesian_regular_grid.cc  common.cc  dust.cc  dust_species.cc  emissivity.cc  frequencies.cc  general_grid.cc  grid.cc  monteCarlo.cc  monte_carlo.cc  photon.cc  photons.cc  radmc.cc  regular_grid.cc  spherical_regular_grid.cc  star.cc  stars.cc
